<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/diary" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_recipes"
        android:title="@string/recipes_tab" />
    <item
        android:id="@+id/nav_plan"
        android:icon="@drawable/ic_plan"
        android:title="@string/plan_tab" />
    <item
        android:id="@+id/nav_learn"
        android:icon="@drawable/ic_play"
        android:title="@string/learn_tab" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
